@@ -1,5 +1,10 @@
 2004-09-22  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/security/SecureRandomSpi.java:
+        Replaced by implementation from GNU Classpath.
+
+2004-09-22  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/security/SecurityPermission.java:
         Replaced by implementation from GNU Classpath.
 
